--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,81 @@
 .App {
-  text-align: center;
+    /*background-color: #ddd;*/
+    /*max-width: 100vw;*/
+    /*height: 100vh;*/
+    /*margin: auto;*/
+    /*overflow: hidden;*/
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.wrap {
+    /*margin: 0;*/
+    /*position: absolute;*/
+    /*!*overflow: hidden;*!*/
+    /*top: 50%;*/
+    /*left: 50%;*/
+    /*!*margin-right: -50%;*!*/
+    /*transform: translate(-50%, -50%);*/
+    /*!*border: 1px solid black;*!*/
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-color: #ddd;
+
+
+    font-family: "Tahoma";
+    font-weight: bold;
+    font-size: 7vw;
+    /*text-align: center;*/
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.selectGameBtnWrap {
+    /*border: 1px solid black;*/
+    width: 80vw;
+    max-width: 500px;
+    height: 60vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.ynBtn {
+    width: 20vw;
+    max-width: 200px;
+    margin: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.modalWindow {
+    height: 100vh;
+    width: 100vw;
+    background-color: rgba(0, 0, 0, 0.4);
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.modal__content {
+    padding: 20px;
+    border-radius: 12px;
+    background: rgba(255, 255, 255, 0.9);
+    max-height: 70vh;
+    min-height: 30vh;
+    width: 90vw;
+    max-width: 600px;
+    position: relative;
+    top: -20%;
+    text-align: center;
+    font-size: 24px;
+}
+
+.hide {
+    display: none;
 }
